--- a/fonts/flaticon/font/_flaticon.scss
+++ b/fonts/flaticon/font/_flaticon.scss
@@ -51,3 +51,4 @@
     $font-Flaticon-vision: "\f104";
     $font-Flaticon-ambulance: "\f105";
     $font-Flaticon-pharmacy: "\f106";
+    $font-Flaticon-battery: "\f107";
