--- a/fonts/flaticon/font/flaticon.css
+++ b/fonts/flaticon/font/flaticon.css
@@ -36,3 +36,4 @@ margin-left: 20px;
 .flaticon-vision:before { content: "\f104"; }
 .flaticon-ambulance:before { content: "\f105"; }
 .flaticon-pharmacy:before { content: "\f106"; }
+.flaticon-battery:before { content: "\f107"; }
