--- a/components/navbar.html
+++ b/components/navbar.html
@@ -1,4 +1,5 @@
 
+
   <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
     <div class="container">
       <a class="navbar-brand" href="../index.html"> 
@@ -53,8 +54,8 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle main-menu" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
               aria-haspopup="true" aria-expanded="false">
-              Shop
-            </a>
+            Catalogue
+          </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="../storefront.html">Storefront</a>
               <a class="dropdown-item" href="../local.html">Local</a>
