--- a/css/animate.css
+++ b/css/animate.css
@@ -24,6 +24,8 @@ Copyright (c) 2015 Daniel Eden
   animation-duration: .5s;
   -webkit-animation-fill-mode: both;
   animation-fill-mode: both;
+  opacity: 100;
+  visibility: visible;
 }
 
 .animated.infinite {
