--- a/css/flaticon.css
+++ b/css/flaticon.css
@@ -12,6 +12,7 @@
        url("../fonts/flaticon/font/Flaticon.woff") format("woff"),
        url("../fonts/flaticon/font/Flaticon.ttf") format("truetype"),
        url("../fonts/flaticon/font/Flaticon.svg#Flaticon") format("svg");
+       
   font-weight: normal;
   font-style: normal;
 }
@@ -44,3 +45,5 @@
 .flaticon-vision:before { content: "\f104"; }
 .flaticon-ambulance:before { content: "\f105"; }
 .flaticon-pharmacy:before { content: "\f106"; }
+.flaticon-battery:before { content: "\f107"; }
+.flaticon-wireless-device:before { content: "\f108"; }
