--- a/scss/style.css
+++ b/scss/style.css
@@ -6766,7 +6766,7 @@ h1, h2, h3, h4, h5,
   position: relative; }
   @media (max-width: 991.98px) {
     .ftco-navbar-light {
-      background: #1cbdab !important;
+      background: #fff !important;
       position: relative;
       top: 0; } }
   .ftco-navbar-light .navbar-brand {
@@ -8083,18 +8083,6 @@ textarea.form-control {
     .block-2 .author .position {
       display: block;
       font-size: 12px; }
-  @media (max-width: 991.98px) {
-    .block-2 .back {
-      -webkit-transform: rotateY(0deg);
-      -moz-transform: rotateY(0deg);
-      -o-transform: rotateY(0deg);
-      -ms-transform: rotateY(0deg);
-      transform: rotateY(0deg); }
-    .block-2 .front {
-      -webkit-transform: rotateY(180deg);
-      -moz-transform: rotateY(180deg);
-      -o-transform: rotateY(180deg);
-      transform: rotateY(180deg); } }
 
 .block-20 {
   overflow: hidden;
